<!--
  ~ Copyright 2017-present Open Networking Foundation
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <parent>
    <groupId>io.zeebe</groupId>
    <artifactId>zeebe-parent</artifactId>
    <version>0.23.0-SNAPSHOT</version>
  </parent>

  <artifactId>atomix-parent</artifactId>
  <packaging>pom</packaging>
  <name>Atomix Parent Pom</name>
  <description>Distributed systems framework.</description>
  <url>http://github.com/atomix/atomix</url>
  <inceptionYear>2013</inceptionYear>

  <properties>
    <jv>${project.version}</jv>

    <license.header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</license.header>
<!--    <license.header>https://raw.githubusercontent.com/zeebe-io/zeebe/develop/parent/COPYING-HEADER.txt</license.header>-->

    <!-- Java -->
    <java.version>1.8</java.version>
    <version.java>8</version.java>

    <!-- Logging -->
    <slf4j.version>1.7.30</slf4j.version>

    <!-- Testing -->
    <junit.version>4.13</junit.version>
    <concurrentunit.version>0.4.6</concurrentunit.version>
    <logback.version>1.2.3</logback.version>

    <!-- Core dependencies -->
    <guava.version>23.0</guava.version>
    <kryo.version>4.0.2</kryo.version>
    <commons.lang3.version>3.9</commons.lang3.version>
    <commons.math3.version>3.6.1</commons.math3.version>
    <netty.version>4.1.48.Final</netty.version>
    <jaxrs.version>2.1.1</jaxrs.version>
    <jackson.version>2.10.3</jackson.version>
    <config.version>1.4.0</config.version>
    <classgraph.version>4.8.65</classgraph.version>
    <prometheus.client.version>0.8.1</prometheus.client.version>

    <!-- Maven plugins -->
    <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
    <maven.failsafe.plugin.version>2.21.0</maven.failsafe.plugin.version>
    <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
    <maven.clean.plugin.version>2.5</maven.clean.plugin.version>
    <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
    <maven.dependency.plugin.version>2.7</maven.dependency.plugin.version>
    <maven.assembly.plugin.version>3.2.0</maven.assembly.plugin.version>
    <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
    <maven.bundle.plugin.version>4.2.1</maven.bundle.plugin.version>
    <maven.dockerfile.plugin.version>1.4.3</maven.dockerfile.plugin.version>

    <dockerfile.version>latest</dockerfile.version>

    <argLine.common>-Xss256k -Xms512m -Xmx2G -XX:+UseConcMarkSweepGC -XX:+UseParNewGC
      -Dio.atomix.whitelistPackages=io.atomix
    </argLine.common>
    <argLine.extras /> <!-- Overridden in some profiles -->
    <argLine.javadocs />
    <version.errorprone>2.3.4</version.errorprone>
    <version.objenesis>3.1</version.objenesis>
  </properties>


  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:zeebe-io/atomix.git</connection>
    <developerConnection>scm:git:git@github.com:zeebe-io/atomix.git</developerConnection>
    <url>git@github.com:zeebe-io/atomix.git</url>
    <tag>HEAD</tag>
  </scm>

  <modules>
    <module>utils</module>
    <module>storage</module>
    <module>cluster</module>
    <module>core</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-bom</artifactId>
        <version>${netty.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${jackson.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>


      <!-- ATOMIX DEPENDENCIES -->
      <dependency>
        <groupId>io.zeebe</groupId>
        <artifactId>atomix-cluster</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.zeebe</groupId>
        <artifactId>atomix-storage</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.zeebe</groupId>
        <artifactId>atomix-utils</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.zeebe</groupId>
        <artifactId>atomix</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava-testlib</artifactId>
        <version>${version.guava}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>net.jodah</groupId>
        <artifactId>concurrentunit</artifactId>
        <version>${concurrentunit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${version.mockito}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${version.guava}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons.lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-math3</artifactId>
        <version>${commons.math3.version}</version>
      </dependency>
      <dependency>
        <groupId>com.esotericsoftware</groupId>
        <artifactId>kryo</artifactId>
        <version>${kryo.version}</version>
      </dependency>
      <dependency>
        <groupId>com.typesafe</groupId>
        <artifactId>config</artifactId>
        <version>${config.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.classgraph</groupId>
        <artifactId>classgraph</artifactId>
        <version>${classgraph.version}</version>
      </dependency>


      <dependency>
        <groupId>com.google.errorprone</groupId>
        <artifactId>error_prone_annotations</artifactId>
        <version>${version.errorprone}</version>
      </dependency>

      <dependency>
        <groupId>org.objenesis</groupId>
        <artifactId>objenesis</artifactId>
        <version>${version.objenesis}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>buildnumber-maven-plugin</artifactId>
          <version>1.4</version>
          <configuration>
            <revisionOnScmFailure>N/A</revisionOnScmFailure>
            <format>{0} (revision {1} built on {2,date,yyyy-MM-dd HH:mm:ss})</format>
            <items>
              <item>${project.version}</item>
              <item>scmVersion</item>
              <item>timestamp</item>
            </items>
            <shortRevisionLength>6</shortRevisionLength>
            <doCheck>false</doCheck>
            <doUpdate>false</doUpdate>
          </configuration>
          <executions>
            <execution>
              <id>configure-buildnumber</id>
              <phase>validate</phase>
              <goals>
                <goal>create</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>

      <!-- LICENSE PLUGIN -->
      <!-- EXCLUDE EVERYTHING FOR NOW -->
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${plugin.version.license}</version>
        <configuration>
          <header>${license.header}</header>
          <properties>
            <owner>camunda services GmbH</owner>
            <email>info@camunda.com</email>
          </properties>
          <excludes>
            <exclude>**/*.java</exclude>
          </excludes>
          <mapping>
            <java>SLASHSTAR_STYLE</java>
          </mapping>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>check/.checkstyle.xml</configLocation>
          <encoding>UTF-8</encoding>
          <failOnViolation>true</failOnViolation>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <sourceDirectories>
            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
            <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
          </sourceDirectories>
        </configuration>
        <dependencies>
          <dependency>
            <artifactId>zeebe-build-tools</artifactId>
            <groupId>io.zeebe</groupId>
            <version>${project.version}</version>
          </dependency>
        </dependencies>
        <!-- dependency on build tool to reference the checkstyle cfg -->
        <executions>
          <execution>
            <configuration>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
            <id>validate-java</id>
            <phase>validate</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${plugin.version.checkstyle}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven.javadoc.plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <verbose>false</verbose>
          <source>${version.java}</source>
          <!-- workaround for https://bugs.openjdk.java.net/browse/JDK-8212233 -->
          <javaApiLinks>
            <property>
              <name>foo</name>
              <value>bar</value>
            </property>
          </javaApiLinks>
          <additionalOptions>-Xdoclint:none</additionalOptions>
          <quiet>true</quiet>
          <show>public</show>
          <doctitle>Atomix API Reference (${jv})</doctitle>
          <windowtitle>Atomix API Reference (${jv})</windowtitle>
          <groups>
            <group>
              <title>Core</title>
              <packages>io.atomix.core*</packages>
            </group>
            <group>
              <title>Cluster Management</title>
              <packages>
                io.atomix.cluster*:io.atomix.cluster.discovery*:io.atomix.cluster.messaging*
              </packages>
            </group>
            <group>
              <title>Protocol API</title>
              <packages>io.atomix.primitive.protocol*</packages>
            </group>
            <group>
              <title>Raft Protocol</title>
              <packages>io.atomix.raft*</packages>
            </group>
            <group>
              <title>Primary-Backup Protocol</title>
              <packages>io.atomix.protocols.backup*</packages>
            </group>
                   <group>
              <title>Storage</title>
              <packages>io.atomix.storage*</packages>
            </group>
            <group>
              <title>Utilities</title>
              <packages>io.atomix.utils*</packages>
            </group>
          </groups>
          <stylesheetfile>${basedir}/docs/style.css</stylesheetfile>
          <excludePackageNames>
            *.impl*:io.atomix.core.config.jackson:io.atomix.core.utils:io.atomix.rest*:io.atomix.agent*:io.atomix.storage.buffer:io.atomix.storage.journal*:io.atomix.storage.statistics:io.atomix.raft.utils:io.atomix.utils.serializer.serializers:io.atomix.utils.concurrent:io.atomix.utils.logging:io.atomix.utils.misc:io.atomix.utils.memory:io.atomix.raft.roles:io.atomix.raft.protocol:io.atomix.raft.storage:io.atomix.raft.cluster:io.atomix.raft.test:io.atomix.protocols.backup.roles:io.atomix.protocols.backup.protocol:io.atomix.protocols.gossip.*
          </excludePackageNames>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <repositories>
    <repository>
      <id>zeebe-nexus</id>
      <name>Zeebe Repository</name>
      <url>https://app.camunda.com/nexus/content/repositories/zeebe-io/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>zeebe-snapshots-nexus</id>
      <name>Zeebe Snapshot Repository</name>
      <url>https://app.camunda.com/nexus/content/repositories/zeebe-io-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>camunda-nexus</id>
      <name>Zeebe Snapshots Repository</name>
      <url>https://app.camunda.com/nexus/content/repositories/zeebe-io-snapshots/</url>
    </snapshotRepository>
    <repository>
      <id>camunda-nexus</id>
      <name>Zeebe Release Repository</name>
      <url>https://app.camunda.com/nexus/content/repositories/zeebe-io/</url>
    </repository>
  </distributionManagement>

</project>
